--- a/project_front/src/app/location.component.html
+++ b/project_front/src/app/location.component.html
@@ -11,8 +11,10 @@
                         <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + location._id + '.png'" style="object-fit: contain; height: 100mm; padding:10px;" alt="A QR code for the assosiated stock location entry">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-6"><button class="btn btn-primary" [routerLink]="['/location', location._id]">Get Location Details</button></div>
-                                <div class="col-6"><button class="btn btn-primary"(click)="DownloadQR(location._id)">Download QR Code</button></div>
+                                <div class="col-6"><button class="btn btn-primary" [routerLink]="['/location', location._id]"  matTooltip="Go to this stocks location page"
+                                    aria-label="Button that leads to the current stocks location page" matTooltipPosition="above">Get Location Details</button></div>
+                                <div class="col-6"><button class="btn btn-primary"(click)="DownloadQR(location._id)" 
+                                    aria-label="Button that leads to the current stocks details page" matTooltipPosition="above"matTooltip="Download the QR code">Download QR Code</button></div>
                             </div>
                         </div>
                         <div class="card-body" style="background-color: #185c9b; color: white;">
@@ -87,7 +89,8 @@
                   <div class="row">
                 <div class="col-3"> <span *ngIf="isLocationIncomplete()">You must complete all fields</span>
                     <button *ngIf="!isLocationIncomplete()" type="submit"
-                        class="btn btn-primary">Submit</button></div>
+                        class="btn btn-primary" matTooltip="Submit the new location"
+                        aria-label="Button that submits new location" matTooltipPosition="right">Submit</button></div>
             </div>
             <div class="row">&nbsp;</div>
           </form>
